Need to figure out how to reply to the GET from the webpage.  {IP_Address:12020} since OSX blocks it under 1024.

--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakTrainCommander/traincommanderunit.lfm
@@ -159,8 +159,8 @@ object FormTrainCommander: TFormTrainCommander
       Left = 629
       Height = 22
       Top = 7
-      Width = 115
-      Caption = 'HTTP Start'
+      Width = 139
+      Caption = 'HTTP Connect'
       OnClick = ButtonHTTPServerClick
       TabOrder = 11
     end
