--- a/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/dualcontroller_unit.lfm
+++ b/Projects/Smart Mobile/SMS Throttle/Lazarus/MustangpeakDualController/dualcontroller_unit.lfm
@@ -9,7 +9,7 @@ object Form1: TForm1
   ClientWidth = 703
   OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
-  LCLVersion = '2.0.6.0'
+  LCLVersion = '2.0.11.0'
   object PanelThrottle1: TPanel
     Left = 0
     Height = 583
@@ -41,7 +41,7 @@ object Form1: TForm1
         Left = 119
         Height = 16
         Top = 6
-        Width = 55
+        Width = 53
         Caption = 'NodeID: '
         ParentColor = False
       end
@@ -49,7 +49,7 @@ object Form1: TForm1
         Left = 120
         Height = 16
         Top = 28
-        Width = 52
+        Width = 49
         Caption = 'AliasID: '
         ParentColor = False
       end
@@ -74,8 +74,8 @@ object Form1: TForm1
     end
     object StatusBarThrottle1: TStatusBar
       Left = 1
-      Height = 15
-      Top = 567
+      Height = 18
+      Top = 564
       Width = 350
       Panels = <      
         item
@@ -86,11 +86,11 @@ object Form1: TForm1
     end
     object PanelThrottleFace1: TPanel
       Left = 1
-      Height = 518
+      Height = 515
       Top = 49
       Width = 350
       Align = alClient
-      ClientHeight = 518
+      ClientHeight = 515
       ClientWidth = 350
       TabOrder = 2
       object PanelThrottleAssign1: TPanel
@@ -114,7 +114,7 @@ object Form1: TForm1
           Left = 16
           Height = 16
           Top = 10
-          Width = 83
+          Width = 81
           Caption = 'DCC Address'
           ParentColor = False
         end
@@ -122,7 +122,7 @@ object Form1: TForm1
           Left = 120
           Height = 18
           Top = 45
-          Width = 104
+          Width = 100
           Caption = 'Long Address'
           TabOrder = 1
         end
@@ -140,7 +140,7 @@ object Form1: TForm1
           ChildSizing.ShrinkVertical = crsScaleChilds
           ChildSizing.Layout = cclLeftToRightThenTopToBottom
           ChildSizing.ControlsPerLine = 1
-          ClientHeight = 65
+          ClientHeight = 69
           ClientWidth = 105
           ItemIndex = 0
           Items.Strings = (
@@ -162,18 +162,18 @@ object Form1: TForm1
           Left = 8
           Height = 18
           Top = 64
-          Width = 173
+          Width = 166
           Caption = 'Ask to allow throttle steal'
           TabOrder = 3
         end
       end
       object PanelThrottleKeypad1: TPanel
         Left = 1
-        Height = 213
+        Height = 210
         Top = 304
         Width = 348
         Align = alClient
-        ClientHeight = 213
+        ClientHeight = 210
         ClientWidth = 348
         TabOrder = 1
         object SpeedButtonFunction0: TSpeedButton
@@ -381,7 +381,7 @@ object Form1: TForm1
           Left = 8
           Height = 16
           Top = 8
-          Width = 83
+          Width = 81
           Caption = 'DCC Address'
           ParentColor = False
         end
@@ -397,7 +397,7 @@ object Form1: TForm1
           Left = 16
           Height = 18
           Top = 32
-          Width = 104
+          Width = 100
           Caption = 'Long Address'
           TabOrder = 3
         end
@@ -415,7 +415,7 @@ object Form1: TForm1
           ChildSizing.ShrinkVertical = crsScaleChilds
           ChildSizing.Layout = cclLeftToRightThenTopToBottom
           ChildSizing.ControlsPerLine = 1
-          ClientHeight = 84
+          ClientHeight = 88
           ClientWidth = 88
           ItemIndex = 0
           Items.Strings = (
@@ -473,7 +473,7 @@ object Form1: TForm1
       Left = 32
       Height = 16
       Top = 15
-      Width = 183
+      Width = 177
       Caption = 'Command Station IP Address'
       ParentColor = False
     end
@@ -509,7 +509,7 @@ object Form1: TForm1
         Left = 119
         Height = 16
         Top = 6
-        Width = 55
+        Width = 53
         Caption = 'NodeID: '
         ParentColor = False
       end
@@ -517,7 +517,7 @@ object Form1: TForm1
         Left = 120
         Height = 16
         Top = 28
-        Width = 52
+        Width = 49
         Caption = 'AliasID: '
         ParentColor = False
       end
@@ -542,8 +542,8 @@ object Form1: TForm1
     end
     object StatusBarThrottle2: TStatusBar
       Left = 1
-      Height = 15
-      Top = 567
+      Height = 18
+      Top = 564
       Width = 350
       Panels = <      
         item
@@ -554,11 +554,11 @@ object Form1: TForm1
     end
     object PanelThrottleFace2: TPanel
       Left = 1
-      Height = 518
+      Height = 515
       Top = 49
       Width = 350
       Align = alClient
-      ClientHeight = 518
+      ClientHeight = 515
       ClientWidth = 350
       TabOrder = 2
       object PanelThrottleAssign2: TPanel
@@ -582,7 +582,7 @@ object Form1: TForm1
           Left = 16
           Height = 16
           Top = 10
-          Width = 83
+          Width = 81
           Caption = 'DCC Address'
           ParentColor = False
         end
@@ -590,7 +590,7 @@ object Form1: TForm1
           Left = 120
           Height = 18
           Top = 45
-          Width = 104
+          Width = 100
           Caption = 'Long Address'
           TabOrder = 1
         end
@@ -608,7 +608,7 @@ object Form1: TForm1
           ChildSizing.ShrinkVertical = crsScaleChilds
           ChildSizing.Layout = cclLeftToRightThenTopToBottom
           ChildSizing.ControlsPerLine = 1
-          ClientHeight = 65
+          ClientHeight = 69
           ClientWidth = 105
           ItemIndex = 0
           Items.Strings = (
@@ -630,18 +630,18 @@ object Form1: TForm1
           Left = 8
           Height = 18
           Top = 64
-          Width = 173
+          Width = 166
           Caption = 'Ask to allow throttle steal'
           TabOrder = 3
         end
       end
       object PanelThrottleKeypad2: TPanel
         Left = 1
-        Height = 213
+        Height = 210
         Top = 304
         Width = 348
         Align = alClient
-        ClientHeight = 213
+        ClientHeight = 210
         ClientWidth = 348
         TabOrder = 1
         object SpeedButtonFunction12: TSpeedButton
@@ -838,7 +838,7 @@ object Form1: TForm1
           Left = 5
           Height = 16
           Top = 8
-          Width = 83
+          Width = 81
           Caption = 'DCC Address'
           ParentColor = False
         end
@@ -878,7 +878,7 @@ object Form1: TForm1
           Left = 16
           Height = 18
           Top = 32
-          Width = 104
+          Width = 100
           Caption = 'Long Address'
           TabOrder = 2
         end
@@ -896,7 +896,7 @@ object Form1: TForm1
           ChildSizing.ShrinkVertical = crsScaleChilds
           ChildSizing.Layout = cclLeftToRightThenTopToBottom
           ChildSizing.ControlsPerLine = 1
-          ClientHeight = 84
+          ClientHeight = 88
           ClientWidth = 89
           ItemIndex = 0
           Items.Strings = (
@@ -919,8 +919,8 @@ object Form1: TForm1
     end
   end
   object ImageList: TImageList
-    left = 396
-    top = 9
+    Left = 396
+    Top = 9
     Bitmap = {
       4C69070000001000000010000000FFFFFF00F7F7FEFFF7F7FEFFFFFFFF00FFFF
       FF00F7F7FEFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
